# wheres-wally

./: .gitignore  main.py  pyproject.toml
data/test/: _annotations.coco.json
data/train/: _annotations.coco.json
data/valid/: _annotations.coco.json
google_colab/: how-to-finetune-rf-detr-on-detection-dataset.ipynb
logs/: celloutput.txt
logs/large/: celloutput.txt  log.txt  results.json
logs/medium/: log.txt  results.json
utils/: RF_DETR.py  cli_commands.py  dataset.py  engine.py  slicing.py
