[project]
name = "wheres-wally"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "rfdetr>=1.3.0",
    "sahi>=0.11.36",
    "supervision>=0.27.0",
    "torch>=2.9.1",
    "torcheval>=0.0.7",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
